<resources>
    <!--Activities Title-->
    <string name="app_name">Markgo</string>
    <string name="title_activity_maps">Map</string>
    <string name="test_activity">Test Activity</string>
    <string name="reports_on_map">Reports Maps</string>

    <!--Activity title-->
    <string name="title_maps">Maps</string>
    <string name="title_maps_picker">Pick Location</string>
    <string name="title_post">Post Review</string>
    <string name="maps_cluster_mode">Clustering Maps</string>
    <string name="maps_heatmap_mode">Heat Maps</string>

    <!--Tab titles array-->
    <string-array name="tab_titles">
        <item>Timeline</item>
        <item>Fixed</item>
        <item>My Reports</item>
    </string-array>


    <!--FAB-->
    <string name="fab_gallery">Gallery</string>
    <string name="fab_camera">Camera</string>
    <string name="snackbar_blocked">Error: You are blocked!</string>

    <!--Dialog-->
    <string name="dialog_exit">Do you want to quit the app?</string>
    <string name="dialog_permission_denied">Permission is not granted</string>
    <string name="dialog_storage_permission_reasoning">Please grant the permission to pick a photo from the Gallery</string>
    <string name="dialog_delete_report">Proceed to delete the report?</string>
    <string name="dialog_issuing_fixed_road">Fixed road issued, waiting for admin confirmation…</string>
    <string name="dialog_cancelling_fixed_road">Fixed road issue cancelled</string>
    <string name="dialog_confirm_signout">Confirm sign out?</string>
    <string name="dialog_reasoning_text">Please explain your reasoning</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="about_submenu">About</string>
    <string name="edit_name_submenu">Edit Name</string>
    <string name="logout_submenu">Logout</string>

    <!--intro-->
    <string name="intro_welcome_title">Markgo</string>
    <string name="intro_welcome_description">Report broken/damaged road</string>
    <string name="intro_permission_description">This apps requires GPS permission to tag your report with geo-location data.</string>
    <string name="intro_form_title">Registration</string>
    <string name="intro_form_description">Name form is not a unique username, you can change it later</string>
    <string name="intro_form_name">Name</string>
    <string name="intro_form_phone">Phone Number</string>
    <string name="intro_form_code">Code</string>
    <string name="intro_invalid_name">name invalid</string>
    <string name="intro_invalid_phone">phone number invalid</string>
    <string name="intro_invalid_code">code invalid</string>
    <string name="intro_form_error">Please fill the name!</string>
    <string name="intro_button_verification1">Get Verification Code</string>
    <string name="intro_button_verification2">Sign In</string>
    <string name="intro_button_Resend">Resend</string>
    <string name="intro_form_snackbar_error1">Please fill all the form accordingly</string>
    <string name="intro_form_snackbar_error2">Waiting for verification code SMS…</string>
    <string name="intro_form_snackbar_error3">Verification code invalid</string>

    <!--Firebase Auth-->
    <string name="fbauth_enter_get_verification">Please wait, getting SMS verification code</string>
    <string name="fbauth_error_not_authorized">Error : The App is not authorized</string>
    <string name="fbauth_error_quota_reached">Error : Request Quota Reached</string>
    <string name="fbauth_error_service_unavailable">Error : Google Play Service unavailable</string>
    <string name="fbauth_error_request_timeout">Error : Request time out, please try again…</string>
    <string name="fbauth_error_other">Error : Something terrible happens!</string>

    <!--Post report-->
    <string name="location_tag_exif">(EXIF)</string>
    <string name="location_tag_gps">(GPS)</string>
    <string name="image_description_thumbnail">image preview</string>
    <string name="form_description_hint">Description</string>
    <string name="get_exif_location">Getting location from photo…</string>
    <string name="get_gps_location">Getting location from GPS…</string>
    <string name="cant_get_location">Can\'t get location</string>
    <string name="cant_get_street_name">Can\'t get street name</string>
    <string name="get_street_name">Getting street name…</string>

    <!--Map List fragment-->
    <string name="fab_heat_map_label">Heat Map</string>
    <string name="fab_clustering_label">Clustering</string>
    <string name="info_window_content">Info window content</string>
    <!--Animation-->
    <string name="animation_photo_view">photoViewAnimation</string>
    <string name="animation_maps_picker">mapsPickerAnimation</string>

    <!--About-->
    <string name="activity_about_title">About</string>
    <string name="activity_about_description"><![CDATA[Report broken/damaged road with ease. As easy as daily dose of social media updates.
    Just take a picture of it (I mean like, the broken road, not your selfie), turn the GPS sensor on, and post.
    This app can handle your reports with flying colors, you shouldn\'t post any kind of selfies once again.
    Just don\'t! For a greater good. We compile the reported data so it can be easily conveyed to the Government
    (just in case 🙂)
    <br /><br /><br /><br /><b>&copy;Tadho 2017</b>
    <br /><br /><br /><br /><br /><br /><br /> <big><b><u>OPEN SOURCE LIBRARIES</u></b></big>]]></string>

    <!--Report Menu-->
    <string name="menu_delete_report">Delete Report</string>
    <string name="menu_issue_fixed">Issue Fixed Road</string>
    <string name="menu_cancel_fixed_issue">Cancel Fixed Issue</string>
    <string name="menu_issue_abuse">Issue Abusive Post</string>
    <string name="fixed_flair">FIXED</string>

    <string name="maps_action_menu_filter">Filter</string>
    <string name="maps_action_filter_all">All</string>
    <string name="maps_action_filter_fixed">Fixed</string>
    <string name="maps_action_filter_unfixed">Broken</string>
    <string-array name="maps_filter_spinner">
        <item>ALL</item>
        <item>NOT FIXED</item>
        <item>FIXED</item>
    </string-array>
</resources>
